# Low-Level-Programming

LLP1/: README.md
LLP1/include/: configuration.h
LLP1/include/basic_tools/: basic_convert.h
LLP1/include/basic_types/: list.h
LLP1/include/crud_tools/: crud.h
LLP1/src/basic_types/: list.c
LLP1/src/commands/: find_command.c
LLP1/src/crud_tools/: crud.c
LLP1/test/: test.c
LLP2/: CMakeLists.txt  README.md  Report.docx
LLP2/include/structure/: view.h
LLP2/src/: main.c
LLP2/src/iotools/: printer.c
LLP2/src/parser/: parser.c
LLP2/src/structure/: view.c
LLP3/: CMakeLists.txt  README.md  Report.docx  client.c  main.c  server.c
LLP3/database_module/: CMakeLists.txt
LLP3/database_module/src/ui/: console_tools.c
LLP3/parser_module/: CMakeLists.txt
LLP3/parser_module/include/: XPATHParser.h
LLP3/parser_module/include/parser/: parser.h
LLP3/parser_module/include/structure/: finite_state.h
LLP3/parser_module/src/: XPATHParser.c
LLP3/proto_module/: message.pb.c
LLP3/proto_module/nanopb/: CMakeCache.txt  cmake_install.cmake
LLP3/proto_module/nanopb/examples/cmake_simple/: CMakeCache.txt  Makefile  cmake_install.cmake
LLP3/proto_module/nanopb/examples/simple/: simple.pb.c  simple.pb.h
